# virtual_machine

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  spec.txt
.cargo/: config.toml
src/: de.rs  gc.rs  main.rs  module.rs  native.rs  object.rs  ops.rs  program.rs  project.rs  ser.rs  string.rs  symbol.rs  utils.rs  value.rs
src/module/: mod.rs
src/module/core/: closure.rs  collections.rs  io.rs  mod.rs
src/object/: array.rs  dict.rs  mod.rs  std_impls.rs  string.rs
src/serde_impl/: de.rs  error.rs  mod.rs  ser.rs
src/serde_vm/: de.rs  error.rs  ser.rs
src/vm/: builtin.rs  cache.rs  exception.rs  function.rs  gc.rs  heap.rs  intrinsics.rs  memory.rs  mod.rs  ops.rs  ops_impl.rs  throwable.rs
