[package]
name = "virtual_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
const_format = "0.2.32"
hashbrown = { version = "0.14", features = ["serde"] }
indexmap = { version = "2.2.5", features = ["serde"] }
paste = "1"
ron = "0.8.1"
rustc-hash = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_repr = "0.1.18"
thiserror = "1"

[profile.release]
strip = false
debug = true
lto = true
codegen-units = 1
